--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.gradleup.shadow' version '9.3.1'
     id 'java'
     id 'maven-publish'
 }
@@ -10,35 +10,23 @@ version = '1.2.7'
 repositories {
     mavenCentral()
     maven { url 'https://repo.papermc.io/repository/maven-public/' }
-    // Config Updater
-    maven { url 'https://oss.sonatype.org/content/groups/public/' }
-    // Floodgate
     maven { url 'https://repo.opencollab.dev/main/' }
-    // FoliaLib
-    maven { url 'https://nexuslite.gcnt.net/repos/other/' }
+    maven { url 'https://repo.opencollab.dev/maven-snapshots/' }
+    maven { url 'https://repo.tcoded.com/releases' }
 }
 
 def minecraftApiVersion = '1.21.11-R0.1-SNAPSHOT'
 
 dependencies {
-    // JetBrains Annotations
-    implementation 'org.jetbrains:annotations:26.0.1'
-    // Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.38'
-    annotationProcessor 'org.projectlombok:lombok:1.18.38'
-    // Minecraft API (Paper/Folia line)
+    implementation 'org.jetbrains:annotations:26.0.2-1'
+    compileOnly 'org.projectlombok:lombok:1.18.42'
+    annotationProcessor 'org.projectlombok:lombok:1.18.42'
     compileOnly "io.papermc.paper:paper-api:${minecraftApiVersion}"
-    // Netty
-    compileOnly 'io.netty:netty-all:4.2.3.Final'
-    // LightInjector
+    compileOnly 'io.netty:netty-all:4.1.131.Final'
     implementation files('impl/LightInjector-1.0.2-forked.jar')
-    // FoliaLib
-    implementation 'com.tcoded:FoliaLib:0.4.2'
-    // Floodgate
-    compileOnly 'org.geysermc.floodgate:api:2.2.3-SNAPSHOT'
-    // Config Updater
-    implementation 'com.tchristofferson:ConfigUpdater:2.1-SNAPSHOT'
-    // MultiVersion
+    implementation 'com.tcoded:FoliaLib:0.5.1'
+    compileOnly 'org.geysermc.floodgate:api:2.2.4-SNAPSHOT'
+    implementation 'com.tchristofferson:ConfigUpdater:2.2'
     implementation fileTree('impl/multiversion')
 }
 
@@ -59,7 +47,6 @@ publishing {
             }
         }
     }
-
 
     publications {
         gpr(MavenPublication) {
