--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.42'
     annotationProcessor 'org.projectlombok:lombok:1.18.42'
 
+    // Paper 1.21.x = Java 21+
     compileOnly "io.papermc.paper:paper-api:${minecraftApiVersion}"
 
     compileOnly 'io.netty:netty-all:4.1.131.Final'
-
     implementation files('impl/LightInjector-1.0.2-forked.jar')
     implementation 'com.tcoded:FoliaLib:0.5.1'
     compileOnly 'org.geysermc.floodgate:api:2.2.4-SNAPSHOT'
@@ -35,9 +35,19 @@ dependencies {
 }
 
 java {
+    // ВАЖНО: именно это влияет на variant-aware dependency resolution (org.gradle.jvm.version)
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
+        languageVersion = JavaLanguageVersion.of(21)
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    // Дублируем на всякий случай, чтобы и javac точно таргетил 21
+    options.release.set(21)
 }
 
 publishing {
@@ -57,12 +67,6 @@ publishing {
             from(components.java)
         }
     }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-    // Для paper-api 1.21.11 нужен таргет >= 21, иначе Gradle не выберет dependency-вариант
-    options.release.set(21)
 }
 
 processResources {
